MEDIUM - If mouse was located over certain invisible divs, it would scroll through slides even when the slides are off screen. its kind of fixed for now

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@
 
 #topRightControls {
     position: fixed;
-    width:200px;
+    width:50px;
     top: 20px;
     right: 20px;
     z-index: 2;
@@ -412,7 +412,7 @@ section:last-child {
     position: fixed;
     bottom: 2vw;
     right: 1vw; 
-    z-index: 2;
+    z-index: 3;
     min-width: 150px;
     max-width: 150px;
 }
